--- a/report/capitulos/capitulo2.tex
+++ b/report/capitulos/capitulo2.tex
@@ -6,7 +6,7 @@
 
 \section{Diseño del lenguaje}
 
-\subsection{Reducción base}
+\section{Reducción base}
 \subsubsection{Reducción del dominio}
 \subsubsection{Reducción del problema}
 
