--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -1,3 +1,10 @@
+@Book{ghallab:book,
+  author = "M. Ghallab and D. S. Nau and P. Traverso",
+  title = "Automated Planning: Theory and Practice",
+  year = "2004",
+  publisher = "Morgan Kaufmann"
+}
+
 @Book{russell:book,
   author    = {Stuart Russell and Peter Norvig},
   title     = {Artificial Intelligence: A Modern Approach},
@@ -87,6 +94,15 @@
   booktitle = "Proc. 1st. Int. Work- shop on Practical Aspects of Declarative Languages",
   address = "San Antonio, TX",
   year = "1999"
+}
+
+@InCollection{reiter:cwa,
+  author = "R. Reiter",
+  title = "On closed-world data bases",
+  booktitle = "Logic and data bases",
+  publisher = "Plenum Press",
+  year = "1978",
+  editor = "H. Gallaire and J. Minker"
 }
 
 @Article{cadoli:safedelay,
